# mm-community

./: .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README  README.md  app.py  datenschutz.html  impressum.html  index.html  indexhtml  main.py  nutzungsbedingungen.html  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  VISION.md
projekte/: README.md
visionen/: README.md
