[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mm-community-api"
version = "0.1.0"
description = "Zentrales Backend für die M&M Community - Gesteuert durch den zahnlosen Frosch"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Goran" }]

dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "cors>=1.0.1"
]

[project.scripts]
start = "main:start_server"
