[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mm-community-api"
version = "0.1.0"
dependencies = [
    "openai>=1.12.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
start = "main:start_server"
